[gd_scene load_steps=6 format=3 uid="uid://plateau_sample_geo_ref"]

[ext_resource type="Script" path="res://samples/geo_reference_sample.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://japanese_font" path="res://fonts/japanese_font.tres" id="2_font"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_sky"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_source = 2
ambient_light_color = Color(0.8, 0.8, 0.8, 1)

[node name="GeoReferenceSample" type="Node3D"]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 100, 200)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 0, 100, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_sky")

[node name="Marker" type="MeshInstance3D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ConversionPanel" type="Panel" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 380.0

[node name="Title" type="Label" parent="UI/ConversionPanel"]
offset_left = 10.0
offset_top = 5.0
offset_right = 280.0
offset_bottom = 25.0
text = "Coordinate Conversion"
horizontal_alignment = 1

[node name="ZoneLabel" type="Label" parent="UI/ConversionPanel"]
offset_left = 10.0
offset_top = 35.0
offset_right = 80.0
offset_bottom = 55.0
text = "Zone (1-19):"

[node name="ZoneSpin" type="SpinBox" parent="UI/ConversionPanel"]
offset_left = 90.0
offset_top = 33.0
offset_right = 150.0
offset_bottom = 57.0
min_value = 1.0
max_value = 19.0
value = 9.0

[node name="PresetOption" type="OptionButton" parent="UI/ConversionPanel"]
offset_left = 160.0
offset_top = 33.0
offset_right = 280.0
offset_bottom = 57.0

[node name="Separator1" type="HSeparator" parent="UI/ConversionPanel"]
offset_left = 10.0
offset_top = 65.0
offset_right = 280.0
offset_bottom = 70.0

[node name="LatLonLabel" type="Label" parent="UI/ConversionPanel"]
offset_left = 10.0
offset_top = 75.0
offset_right = 280.0
offset_bottom = 95.0
text = "Lat/Lon/Height (Geographic)"
horizontal_alignment = 1

[node name="LatLabel" type="Label" parent="UI/ConversionPanel"]
offset_left = 10.0
offset_top = 100.0
offset_right = 70.0
offset_bottom = 120.0
text = "Latitude:"

[node name="LatSpin" type="SpinBox" parent="UI/ConversionPanel"]
offset_left = 75.0
offset_top = 98.0
offset_right = 200.0
offset_bottom = 122.0
min_value = -90.0
max_value = 90.0
step = 0.0001
value = 35.6812

[node name="LonLabel" type="Label" parent="UI/ConversionPanel"]
offset_left = 10.0
offset_top = 128.0
offset_right = 70.0
offset_bottom = 148.0
text = "Longitude:"

[node name="LonSpin" type="SpinBox" parent="UI/ConversionPanel"]
offset_left = 75.0
offset_top = 126.0
offset_right = 200.0
offset_bottom = 150.0
min_value = -180.0
max_value = 180.0
step = 0.0001
value = 139.7671

[node name="HeightLabel" type="Label" parent="UI/ConversionPanel"]
offset_left = 10.0
offset_top = 156.0
offset_right = 70.0
offset_bottom = 176.0
text = "Height:"

[node name="HeightSpin" type="SpinBox" parent="UI/ConversionPanel"]
offset_left = 75.0
offset_top = 154.0
offset_right = 200.0
offset_bottom = 178.0
min_value = -1000.0
max_value = 10000.0
step = 0.1

[node name="ProjectButton" type="Button" parent="UI/ConversionPanel"]
offset_left = 10.0
offset_top = 185.0
offset_right = 280.0
offset_bottom = 210.0
text = "Project (Lat/Lon -> XYZ)"

[node name="Separator2" type="HSeparator" parent="UI/ConversionPanel"]
offset_left = 10.0
offset_top = 220.0
offset_right = 280.0
offset_bottom = 225.0

[node name="XYZLabel" type="Label" parent="UI/ConversionPanel"]
offset_left = 10.0
offset_top = 230.0
offset_right = 280.0
offset_bottom = 250.0
text = "XYZ (Local Coordinates)"
horizontal_alignment = 1

[node name="XLabel" type="Label" parent="UI/ConversionPanel"]
offset_left = 10.0
offset_top = 255.0
offset_right = 30.0
offset_bottom = 275.0
text = "X:"

[node name="XSpin" type="SpinBox" parent="UI/ConversionPanel"]
offset_left = 35.0
offset_top = 253.0
offset_right = 135.0
offset_bottom = 277.0
min_value = -1000000.0
max_value = 1000000.0
step = 0.1

[node name="YLabel" type="Label" parent="UI/ConversionPanel"]
offset_left = 10.0
offset_top = 283.0
offset_right = 30.0
offset_bottom = 303.0
text = "Y:"

[node name="YSpin" type="SpinBox" parent="UI/ConversionPanel"]
offset_left = 35.0
offset_top = 281.0
offset_right = 135.0
offset_bottom = 305.0
min_value = -1000000.0
max_value = 1000000.0
step = 0.1

[node name="ZLabel" type="Label" parent="UI/ConversionPanel"]
offset_left = 10.0
offset_top = 311.0
offset_right = 30.0
offset_bottom = 331.0
text = "Z:"

[node name="ZSpin" type="SpinBox" parent="UI/ConversionPanel"]
offset_left = 35.0
offset_top = 309.0
offset_right = 135.0
offset_bottom = 333.0
min_value = -1000000.0
max_value = 1000000.0
step = 0.1

[node name="UnprojectButton" type="Button" parent="UI/ConversionPanel"]
offset_left = 10.0
offset_top = 340.0
offset_right = 280.0
offset_bottom = 365.0
text = "Unproject (XYZ -> Lat/Lon)"

[node name="ImportPanel" type="Panel" parent="UI"]
offset_left = 10.0
offset_top = 390.0
offset_right = 300.0
offset_bottom = 480.0

[node name="Title" type="Label" parent="UI/ImportPanel"]
offset_left = 10.0
offset_top = 5.0
offset_right = 280.0
offset_bottom = 25.0
text = "GML Import (for visualization)"
horizontal_alignment = 1

[node name="ImportButton" type="Button" parent="UI/ImportPanel"]
offset_left = 10.0
offset_top = 30.0
offset_right = 280.0
offset_bottom = 55.0
text = "Import GML..."

[node name="ShowLocationButton" type="Button" parent="UI/ImportPanel"]
offset_left = 10.0
offset_top = 60.0
offset_right = 280.0
offset_bottom = 85.0
text = "Show Location on Map"

[node name="LogPanel" type="Panel" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -420.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0

[node name="Title" type="Label" parent="UI/LogPanel"]
offset_left = 10.0
offset_top = 5.0
offset_right = 390.0
offset_bottom = 25.0
text = "Log"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UI/LogPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 30.0
offset_right = 400.0
offset_bottom = -10.0
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LogLabel" type="RichTextLabel" parent="UI/LogPanel/ScrollContainer"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_font")
bbcode_enabled = true
fit_content = true
scroll_following = true

[node name="LoadingPanel" type="Panel" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadingLabel" type="Label" parent="UI/LoadingPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1
